--- a/html_dog/CSS_tutorial/extrenal.css
+++ b/html_dog/CSS_tutorial/extrenal.css
@@ -1,5 +1,72 @@
 /*  Btw, this is a comment -- just like C created   */
 h1 {
-    color: aqua;
+    color: crimson;
     font-family: cursive;
+    margin: 20px;
+    padding: 40px;
+    text-align: center;
+    border-style: ridge;
+    border-color: floralwhite;
+    border-width: medium;
+}
+
+body {
+    font-size: 14px;
+    color: darkslategray;
+    background: white url(https://s-media-cache-ak0.pinimg.com/originals/11/e0/55/11e05545c68ac2988da8ecfa551e8b59.jpg) no-repeat top right;
+}
+
+p {
+    font-style: italic;
+    font-weight: bold;
+    text-align: justify;
+    border-width: 1px;
+    border-color: red;
+    border-style: solid;
+}
+
+/*  The difference between an ID and a class is that an ID can be used to identify one element, whereas a class can be used to identify more than one.  */
+#top {
+    background-color: #ccc;
+    padding: 20px
+}
+
+.intro {
+    color: red;
+    font-weight: bold;
+}
+
+h2, .grouping1, .grouping2 {
+    color: darkgoldenrod;
+}
+
+h2 #top {
+    background-color: black;
+}
+
+a:link {
+    color: blue;
+}
+
+a:visted {
+    color: aqua;
+}
+
+a:active {
+    color: red;
+}
+
+a:hover {
+    text-decoration: none;
+    color: blue;
+    background-color: yellow;
+}
+
+input:focus, textarea:focus {
+    background-color: #eee;
+}
+
+p:first-child {
+    font-weight: bold;
+    font-size: 40px;
 }
