--- a/etch_a_sketch/css/sheet.css
+++ b/etch_a_sketch/css/sheet.css
@@ -1,3 +1,71 @@
-.grid {
-    
+body {
+	background:#006064;
+	font-family: arial, sans-serif;
+	font-size: 14px;
+	margin:0;
+	padding:0;
+}
+
+.header {
+	color:#E0F7FA;
+	display: block;
+	font-size: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	width:500px;
+}
+
+#header {
+	margin-bottom: 8px;
+	margin-top: 8px;
+}
+
+.button {
+    background-color: #00BCD4;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#clear:focus{
+	outline: none;
+}
+
+.container {
+	background:#fff;
+	display: block;
+	height: 550px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 8px;
+	padding:0;
+	width: 550px;
+    border-bottom-color: #90CAF9;
+    border-radius: 5px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.row {
+	display: flex;
+}
+
+.square {
+	display: inline-block;
+}
+
+.dot {
+	background:#7E57C2;
 }
